<resources>
    <string name="app_name">Login App</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_page_txt">Sign Up Page</string>
    <string name="name">Name</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="login_app">Login App</string>
    <string name="pratyush_kumar_jena">Pratyush Kumar Jena</string>
    <string name="pratyush_gmail_com">pratyush@gmail.com</string>
    <string name="ph_no">Ph No.</string>
    <string name="_9827896654">9827896654</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_search_fragment">This is Search Fragment</string>
    <string name="this_is_settings_fragment">This is Settings Fragment</string>
</resources>