<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="20dp"
    android:background="@color/white"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:text="@string/pratyush_kumar_jena"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/pratyush_gmail_com"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ph_no"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/userPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/_9827896654"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>