<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginPage">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="center"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_LogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log In Page"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_signUp"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:elevation="10dp"
                android:layout_marginEnd="36dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_LogIn">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/edt_LogIn_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rounded_corner_background"
                        android:elevation="7dp"
                        android:hint="@string/email"
                        android:textColorHint="#7B7B7B"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:padding="12dp" />

                    <EditText
                        android:id="@+id/edt_LogIn_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rounded_corner_background"
                        android:elevation="7dp"
                        android:hint="@string/password"
                        android:textColorHint="#7B7B7B"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:padding="12dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_LogIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_margin="10dp"
                        android:elevation="7dp"
                        android:ems="15"
                        android:background="@drawable/button_rounded_background"
                        android:padding="12dp"
                        android:layout_gravity="center"
                        android:text="@string/log_in"
                        android:textColor="@color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_Btn_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_txt"
                android:textColor="#6C63FF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>